--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .wrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 100vh;
+  width: 100%;
   background: #f3f3f3;
 }
 
@@ -43,4 +43,16 @@
   left: 8px;
   font-size: 12px;
   color: #3f51b5;
+}
+button{
+  background-color: rgba(0, 128, 0, 0.884);
+  border-radius: 5px;
+  width: 130px;
+  height: 40px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: large;
+  margin-left: 80px;
 }
