--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,4 @@
-.wrapper {
-  display: flex;
-  justify-content: center;
-  height: 100vh;
-  width: 100%;
-  background: #f3f3f3;
-}
+
 
 .custom-textfield {
   position: relative;
@@ -54,5 +48,22 @@ button{
   justify-content: center;
   align-items: center;
   font-size: large;
-  margin-left: 80px;
+  margin-top: 20px;
+  border: none;
+  cursor: pointer;
+}
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;           /* Full screen height */
+  width: 100vw;            /* Full screen width */
+  background: #f3f3f3;
+
+  /* Inner content layout */
+  flex-direction: column;
+  padding: 30px;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
